[ch20] List active sessions for current user
